--- a/DotnetAngularBoilerplate.WebClient/src/app/app.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div id="right-panel" class="right-panel">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</div>
