--- a/DotnetAngularBoilerplate.WebClient/src/app/@core/components/footer/footer.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/@core/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="footer-inner bg-white">
         <div class="row">
             <div class="col-sm-6">
-                Copyright &copy; 2023
+                Copyright © 2023-24. All rights reserved.
             </div>
             <div class="col-sm-6 text-right">
                 Designed by <strong>Devesh Sahu</strong>
