--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/register/register.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/register/register.component.html
@@ -4,15 +4,15 @@
             <div class="login-form">
                 <form>
                     <div class="form-group">
-                        <label>User Name</label>
+                        <label for="User Name">User Name</label>
                         <input type="email" class="form-control" placeholder="User Name">
                     </div>
                     <div class="form-group">
-                        <label>Email address</label>
+                        <label for="Email">Email address</label>
                         <input type="email" class="form-control" placeholder="Email">
                     </div>
                     <div class="form-group">
-                        <label>Password</label>
+                        <label for="Password">Password</label>
                         <input type="password" class="form-control" placeholder="Password">
                     </div>
                     <div class="checkbox">
