--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
@@ -1,15 +1,18 @@
-.divider:after,
-.divider:before {
-content: "";
-flex: 1;
-height: 1px;
-background: #eee;
+.logo {
+    height: 90vh;
+    display: block;
+    margin: 0 auto;
+    width: 100%;
 }
-.h-custom {
-height: calc(100% - 73px);
+.login-section{
+    margin-top: calc(0rem - var(--header-height) - 1rem);
+    margin-left: calc(0rem - var(--nav-width) - 2rem);
+    height: 100vh;
+    width: 100vw;
 }
-@media (max-width: 450px) {
-.h-custom {
-height: 100%;
+.login-header{
+    height: 5vh;
 }
+.login-box-shadow{
+    box-shadow: -10px -10px 20px 0 rgba(0, 0, 0, 0.2), 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
 }
