--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.html
@@ -1,18 +1,68 @@
+<!-- eslint-disable @angular-eslint/template/elements-content -->
 <div class="login-section">
-    <div class="login-header">
-
-    </div>
+    <div class="login-header"></div>
     <div class="container rounded-3">
-        <div class="row m-0 p-0 login-box-shadow">   
-    <!-- image -->
-    <div class="col-md-6 m-0 p-0">
-        <img class="logo" [src]="'https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/login_side_img.jpg?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEOv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCmFwLXNvdXRoLTEiRzBFAiEAyPnmHPJX7p1dsHgdoS82%2FClqUw7UYCqdoFkcURFXtPgCIGByYKH3SED26lu6VQoAHEtI27D%2Fik9V%2F1XVu55W42YtKuQCCBUQABoMNzQ1ODI0NDM1NjEyIgyyJI1SKr8jQaWqinAqwQJ6DcPaO1n%2BsiqPqT86sj1FfRMl1aNJH7%2FrWDSFHkUXtQwK6pETxATUTLtKXfUL4gbcpQv8MwYTQqetT7vMKjNeM%2FBFwu5XNE4%2B7uXYeMOlVGCL2OIB%2F1H3zG5BGZCPnRSC7QVghUvgM6B4WcksFO9LP5kPaIFEmymVorTdyzlHpFJskxtqg1LEAptQVhPoA4H4ZvGMfh0m6kLHd6PwXa3IcHJGFFDZyeebs6r71VAgQf9jO2tLOZLVJJuDf9elabJ8DMZCtjPiFceYEvprLCoYR3O6%2FIOxzEoh3%2BOEXlVAjNkxOAMfsmastQ7GQFlPCbGAmMa71r%2FHRH%2FxvTw0eYKbyVc%2F6jYGTfC1FBLWRfsFmcMxkomSC5PxqNVBQZabWeZkLd6P0Or3iZBGPsuXGMTQe3onLCpWtL8sTEAZq1aLihcwkYzUqQY6swJjgpIqiJ1xPgqvBCYbRxx6FujEcTVwLfQ5t9uKbvFKEkl2KTaSocTGSrlPCKl3W8DB7%2F4OLGftbbPa30an3mJuT9B6ktxKr%2FP6VXvPBvON2zYmF6JROb%2BKiBrYUYiDi7t7PgEJf4ql%2FVfOyCCQbkpyNqo9lrDy0pbQThpvW5nkqOk2VNe%2BNwLiOS2TfCrX1fRT7%2FNWAQrtE3Ma1OxVy8Ka5Bnh9dxKTr4RsYLcifbl6kyn6lChyj0q7tcMQgwTh05b2iCTTiuKYsArJIKNZq7xxZx4aVVs7osbFdZKmSSvkpBnAYik0ic4Hg6kWC%2FdRAC%2BWlBIgdEVbWmZBuk7w3EblNdbNUPZcKw%2FLpaGzazve4J%2B9iP6JECBHkm9zSYYz12F0an7%2F59fiRd6kg%2FCy0dYLCyF&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20231022T113128Z&X-Amz-SignedHeaders=host&X-Amz-Expires=43200&X-Amz-Credential=ASIA23JUZXWOCA22CE3H%2F20231022%2Fap-south-1%2Fs3%2Faws4_request&X-Amz-Signature=49341cca099ebf00fe90260e43c9ab99c34f2b5c5408e22337b5c9360f7806e4'" alt="Login">
-    </div>
-    <!-- login details -->
-    <div class="col-md-6 m-0 p-0">
-        <img class="logo" [src]="'https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/login_side_img.jpg?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEOv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCmFwLXNvdXRoLTEiRzBFAiEAyPnmHPJX7p1dsHgdoS82%2FClqUw7UYCqdoFkcURFXtPgCIGByYKH3SED26lu6VQoAHEtI27D%2Fik9V%2F1XVu55W42YtKuQCCBUQABoMNzQ1ODI0NDM1NjEyIgyyJI1SKr8jQaWqinAqwQJ6DcPaO1n%2BsiqPqT86sj1FfRMl1aNJH7%2FrWDSFHkUXtQwK6pETxATUTLtKXfUL4gbcpQv8MwYTQqetT7vMKjNeM%2FBFwu5XNE4%2B7uXYeMOlVGCL2OIB%2F1H3zG5BGZCPnRSC7QVghUvgM6B4WcksFO9LP5kPaIFEmymVorTdyzlHpFJskxtqg1LEAptQVhPoA4H4ZvGMfh0m6kLHd6PwXa3IcHJGFFDZyeebs6r71VAgQf9jO2tLOZLVJJuDf9elabJ8DMZCtjPiFceYEvprLCoYR3O6%2FIOxzEoh3%2BOEXlVAjNkxOAMfsmastQ7GQFlPCbGAmMa71r%2FHRH%2FxvTw0eYKbyVc%2F6jYGTfC1FBLWRfsFmcMxkomSC5PxqNVBQZabWeZkLd6P0Or3iZBGPsuXGMTQe3onLCpWtL8sTEAZq1aLihcwkYzUqQY6swJjgpIqiJ1xPgqvBCYbRxx6FujEcTVwLfQ5t9uKbvFKEkl2KTaSocTGSrlPCKl3W8DB7%2F4OLGftbbPa30an3mJuT9B6ktxKr%2FP6VXvPBvON2zYmF6JROb%2BKiBrYUYiDi7t7PgEJf4ql%2FVfOyCCQbkpyNqo9lrDy0pbQThpvW5nkqOk2VNe%2BNwLiOS2TfCrX1fRT7%2FNWAQrtE3Ma1OxVy8Ka5Bnh9dxKTr4RsYLcifbl6kyn6lChyj0q7tcMQgwTh05b2iCTTiuKYsArJIKNZq7xxZx4aVVs7osbFdZKmSSvkpBnAYik0ic4Hg6kWC%2FdRAC%2BWlBIgdEVbWmZBuk7w3EblNdbNUPZcKw%2FLpaGzazve4J%2B9iP6JECBHkm9zSYYz12F0an7%2F59fiRd6kg%2FCy0dYLCyF&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20231022T113128Z&X-Amz-SignedHeaders=host&X-Amz-Expires=43200&X-Amz-Credential=ASIA23JUZXWOCA22CE3H%2F20231022%2Fap-south-1%2Fs3%2Faws4_request&X-Amz-Signature=49341cca099ebf00fe90260e43c9ab99c34f2b5c5408e22337b5c9360f7806e4'" alt="Login">
-    </div>
+        <div class="row m-0 p-0 login-box-shadow">
+            <!-- image -->
+            <div class="col-md-6 m-0 p-0">
+                <img class="login-cover-image"
+                    src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/login_side_img.jpg?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEOv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCmFwLXNvdXRoLTEiRzBFAiEAyPnmHPJX7p1dsHgdoS82%2FClqUw7UYCqdoFkcURFXtPgCIGByYKH3SED26lu6VQoAHEtI27D%2Fik9V%2F1XVu55W42YtKuQCCBUQABoMNzQ1ODI0NDM1NjEyIgyyJI1SKr8jQaWqinAqwQJ6DcPaO1n%2BsiqPqT86sj1FfRMl1aNJH7%2FrWDSFHkUXtQwK6pETxATUTLtKXfUL4gbcpQv8MwYTQqetT7vMKjNeM%2FBFwu5XNE4%2B7uXYeMOlVGCL2OIB%2F1H3zG5BGZCPnRSC7QVghUvgM6B4WcksFO9LP5kPaIFEmymVorTdyzlHpFJskxtqg1LEAptQVhPoA4H4ZvGMfh0m6kLHd6PwXa3IcHJGFFDZyeebs6r71VAgQf9jO2tLOZLVJJuDf9elabJ8DMZCtjPiFceYEvprLCoYR3O6%2FIOxzEoh3%2BOEXlVAjNkxOAMfsmastQ7GQFlPCbGAmMa71r%2FHRH%2FxvTw0eYKbyVc%2F6jYGTfC1FBLWRfsFmcMxkomSC5PxqNVBQZabWeZkLd6P0Or3iZBGPsuXGMTQe3onLCpWtL8sTEAZq1aLihcwkYzUqQY6swJjgpIqiJ1xPgqvBCYbRxx6FujEcTVwLfQ5t9uKbvFKEkl2KTaSocTGSrlPCKl3W8DB7%2F4OLGftbbPa30an3mJuT9B6ktxKr%2FP6VXvPBvON2zYmF6JROb%2BKiBrYUYiDi7t7PgEJf4ql%2FVfOyCCQbkpyNqo9lrDy0pbQThpvW5nkqOk2VNe%2BNwLiOS2TfCrX1fRT7%2FNWAQrtE3Ma1OxVy8Ka5Bnh9dxKTr4RsYLcifbl6kyn6lChyj0q7tcMQgwTh05b2iCTTiuKYsArJIKNZq7xxZx4aVVs7osbFdZKmSSvkpBnAYik0ic4Hg6kWC%2FdRAC%2BWlBIgdEVbWmZBuk7w3EblNdbNUPZcKw%2FLpaGzazve4J%2B9iP6JECBHkm9zSYYz12F0an7%2F59fiRd6kg%2FCy0dYLCyF&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20231022T113128Z&X-Amz-SignedHeaders=host&X-Amz-Expires=43200&X-Amz-Credential=ASIA23JUZXWOCA22CE3H%2F20231022%2Fap-south-1%2Fs3%2Faws4_request&X-Amz-Signature=49341cca099ebf00fe90260e43c9ab99c34f2b5c5408e22337b5c9360f7806e4"
+                    alt="Login" />
+            </div>
+            <!-- login details -->
+            <div class="col-md-6 m-0 p-0">
+                <div class="logo">
+                    <img src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/Untitled%20design.png?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEOv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCmFwLXNvdXRoLTEiRzBFAiEAyPnmHPJX7p1dsHgdoS82%2FClqUw7UYCqdoFkcURFXtPgCIGByYKH3SED26lu6VQoAHEtI27D%2Fik9V%2F1XVu55W42YtKuQCCBUQABoMNzQ1ODI0NDM1NjEyIgyyJI1SKr8jQaWqinAqwQJ6DcPaO1n%2BsiqPqT86sj1FfRMl1aNJH7%2FrWDSFHkUXtQwK6pETxATUTLtKXfUL4gbcpQv8MwYTQqetT7vMKjNeM%2FBFwu5XNE4%2B7uXYeMOlVGCL2OIB%2F1H3zG5BGZCPnRSC7QVghUvgM6B4WcksFO9LP5kPaIFEmymVorTdyzlHpFJskxtqg1LEAptQVhPoA4H4ZvGMfh0m6kLHd6PwXa3IcHJGFFDZyeebs6r71VAgQf9jO2tLOZLVJJuDf9elabJ8DMZCtjPiFceYEvprLCoYR3O6%2FIOxzEoh3%2BOEXlVAjNkxOAMfsmastQ7GQFlPCbGAmMa71r%2FHRH%2FxvTw0eYKbyVc%2F6jYGTfC1FBLWRfsFmcMxkomSC5PxqNVBQZabWeZkLd6P0Or3iZBGPsuXGMTQe3onLCpWtL8sTEAZq1aLihcwkYzUqQY6swJjgpIqiJ1xPgqvBCYbRxx6FujEcTVwLfQ5t9uKbvFKEkl2KTaSocTGSrlPCKl3W8DB7%2F4OLGftbbPa30an3mJuT9B6ktxKr%2FP6VXvPBvON2zYmF6JROb%2BKiBrYUYiDi7t7PgEJf4ql%2FVfOyCCQbkpyNqo9lrDy0pbQThpvW5nkqOk2VNe%2BNwLiOS2TfCrX1fRT7%2FNWAQrtE3Ma1OxVy8Ka5Bnh9dxKTr4RsYLcifbl6kyn6lChyj0q7tcMQgwTh05b2iCTTiuKYsArJIKNZq7xxZx4aVVs7osbFdZKmSSvkpBnAYik0ic4Hg6kWC%2FdRAC%2BWlBIgdEVbWmZBuk7w3EblNdbNUPZcKw%2FLpaGzazve4J%2B9iP6JECBHkm9zSYYz12F0an7%2F59fiRd6kg%2FCy0dYLCyF&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20231022T150349Z&X-Amz-SignedHeaders=host&X-Amz-Expires=43200&X-Amz-Credential=ASIA23JUZXWOCA22CE3H%2F20231022%2Fap-south-1%2Fs3%2Faws4_request&X-Amz-Signature=07ef8fd5061a5c9ee110c4a0470d8879bae73b15ec8ce80c118c94d670b209c3"
+                        alt="">
+                    <p class="logo-slogan text-center">Turning Dreams into Code: Building Apps Beyond Boundaries!</p>
+                </div>
+                <div class="login-form">
+                    <div class="card mr-3">
+                        <div class="card-body">
+                            <h3 class="card-title font-weight-bolder mb-3">Sign into your account</h3>
+                            <form action="" #loginForm="ngForm">
+                                <div class="form-group">
+                                    <label for="loginEmailUsername">Email address or username</label>
+                                    <div class="input-group mb-2">
+                                        <div class="input-group-prepend input-group-lg">
+                                            <div class="input-group-text">@</div>
+                                        </div>
+                                        <input type="text" class="form-control " name="loginEmailUsername"
+                                            placeholder="something@domain.com">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="loginEmailUsername">Password</label>
+                                    <div class="input-group mb-2">
+                                        <div class="input-group-prepend input-group-lg">
+                                            <div class="input-group-text">#</div>
+                                        </div>
+                                        <input type="password" class="form-control" name="loginPassword"
+                                            placeholder="Your password">
+                                            
+                                        <!-- <small id="loginPasswordHelpBlock" class="form-text text-muted">
+                                            Your password must be 8-20 characters long, contain letters and numbers, and
+                                            must not contain spaces, special characters, or emoji.
+                                        </small> -->
+                                    </div>
+                                </div>
+                                <div >
+                                    <p-checkbox [(ngModel)]="isRememberMeChecked" [binary]="true" label="Remember me" inputId="binary" ></p-checkbox>
+                                    <!-- <p-checkbox id="rememberMe" inputId="binary" [binary]="true" label="Remember me" [(ngModel)]="selectedValues"></p-checkbox> -->
+                                    <!-- <label for="rememberMe">Remember me</label> -->
+                                    
+                                </div>
+                                <div class="form-group card flex justify-content-center mt-2">
+                                    <button pButton label="Login" class="submit-button" [loading]="isLoading" (onClick)="onLogin(loginForm)"></button>
+                                </div>
+                            </form>
+                            <div class="social-login">
+                                <p class="text-center">Or</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        
     </div>
 </div>
