--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
@@ -33,9 +33,23 @@
   text-shadow: 5px 10px 8px #888888;
 }
 .login-form {
-  padding: 2rem;
+  padding: 1rem 2rem 2rem 2rem;
 }
 .submit-button {
   width: 100% !important;
   height: 2.5rem !important;
+}
+.forgot-button {
+  padding: 0 !important;
+  float: right !important;
+}
+.google {
+  background-color: white;
+  color: black;
+  border-color: grey;
+}
+.google:hover {
+  background-color: grey;
+  color: white;
+  border-color: grey;
 }
