--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.html
@@ -17,12 +17,13 @@
                     <p class="logo-slogan text-center">Turning Dreams into Code: Building Apps Beyond Boundaries!</p>
                 </div>
                 <div class="login-form">
-                    <div class="card mr-3">
+                    <div class="card mr-3 login-form-card">
                         <div class="card-body">
                             <h3 class="card-title font-weight-bolder mb-3">Sign into your account</h3>
-                            <form action="" #loginForm="ngForm">
+                            <form #loginForm="ngForm">
                                 <div class="form-group">
-                                    <label for="loginEmailUsername">Email address or username</label>
+                                    <label for="loginEmailUsername" class="font-weight-bold">Email address or
+                                        username</label>
                                     <div class="input-group mb-2">
                                         <div class="input-group-prepend input-group-lg">
                                             <div class="input-group-text">@</div>
@@ -39,7 +40,7 @@
                                         </div>
                                         <input type="password" class="form-control" name="loginPassword"
                                             placeholder="Your password">
-                                            
+
                                         <!-- <small id="loginPasswordHelpBlock" class="form-text text-muted">
                                             Your password must be 8-20 characters long, contain letters and numbers, and
                                             must not contain spaces, special characters, or emoji.
@@ -48,14 +49,17 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <p-checkbox [(ngModel)]="isRememberMeChecked" [binary]="true" label="Remember me" inputId="binary" ></p-checkbox>
+                                        <p-checkbox [(ngModel)]="isRememberMeChecked" [binary]="true"
+                                            label="Remember me" inputId="binary"></p-checkbox>
                                     </div>
                                     <div class="col-md-6">
-                                        <button pButton type="button" label="Forgot password" class="p-button-link forgot-button" (onClick)="forgotPassword()"></button>
+                                        <button pButton type="button" label="Forgot password"
+                                            class="p-button-link forgot-button" (onClick)="forgotPassword()"></button>
                                     </div>
                                 </div>
                                 <div class="form-group card flex justify-content-center mt-3">
-                                    <button pButton label="Login" class="submit-button" [loading]="isLoading" (onClick)="onLogin(loginForm)"></button>
+                                    <button pButton label="Login" class="submit-button" [loading]="isLoading"
+                                        (onClick)="onLogin(loginForm)"></button>
                                 </div>
                             </form>
                             <hr>
@@ -64,18 +68,54 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
-                                            <!-- <p-button class="submit-button" label="Plain" [text]="true" [plain]="true"></p-button> -->
-                                            <button pButton class="submit-button p-button-raised google" label="Google" [loading]="isLoading" (onClick)="onLogin(loginForm)"></button>
+                                            <button pButton class="submit-button p-button-raised google"
+                                                [loading]="isLoading" (onClick)="onLogin(loginForm)"><svg
+                                                    xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24"
+                                                    width="24">
+                                                    <path
+                                                        d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
+                                                        fill="#4285F4" />
+                                                    <path
+                                                        d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+                                                        fill="#34A853" />
+                                                    <path
+                                                        d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
+                                                        fill="#FBBC05" />
+                                                    <path
+                                                        d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
+                                                        fill="#EA4335" />
+                                                    <path d="M1 1h22v22H1z" fill="none" />
+                                                </svg>
+                                                <p class="social-media-name">Google</p>
+                                            </button>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
-                                            <button pButton label="Microsoft" class="submit-button" [loading]="isLoading" (onClick)="onLogin(loginForm)"></button>
+                                            <button pButton class="submit-button p-button-raised google"
+                                                [loading]="isLoading" (onClick)="onLogin(loginForm)"><svg
+                                                    xmlns="http://www.w3.org/2000/svg" version="1.1"
+                                                    viewBox="0 0 337.6 72">
+                                                    <path fill="#737373"
+                                                        d="M140.4,14.4v43.2h-7.5V23.7h-0.1l-13.4,33.9h-5l-13.7-33.9h-0.1v33.9h-6.9V14.4h10.8l12.4,32h0.2l13.1-32H140.4 z M146.6,17.7c0-1.2,0.4-2.2,1.3-3c0.9-0.8,1.9-1.2,3.1-1.2c1.3,0,2.4,0.4,3.2,1.2s1.3,1.8,1.3,3c0,1.2-0.4,2.2-1.3,3 c-0.9,0.8-1.9,1.2-3.2,1.2s-2.3-0.4-3.1-1.2C147.1,19.8,146.6,18.8,146.6,17.7z M154.7,26.6v31h-7.3v-31H154.7z M176.8,52.3 c1.1,0,2.3-0.2,3.6-0.8c1.3-0.5,2.5-1.2,3.6-2v6.8c-1.2,0.7-2.5,1.2-4,1.5c-1.5,0.3-3.1,0.5-4.9,0.5c-4.6,0-8.3-1.4-11.1-4.3 c-2.9-2.9-4.3-6.6-4.3-11c0-5,1.5-9.1,4.4-12.3c2.9-3.2,7-4.8,12.4-4.8c1.4,0,2.8,0.2,4.1,0.5c1.4,0.3,2.5,0.8,3.3,1.2v7 c-1.1-0.8-2.3-1.5-3.4-1.9c-1.2-0.4-2.4-0.7-3.6-0.7c-2.9,0-5.2,0.9-7,2.8s-2.6,4.4-2.6,7.6c0,3.1,0.9,5.6,2.6,7.3 C171.6,51.4,173.9,52.3,176.8,52.3z M204.7,26.1c0.6,0,1.1,0,1.6,0.1s0.9,0.2,1.2,0.3v7.4c-0.4-0.3-0.9-0.6-1.7-0.8 s-1.6-0.4-2.7-0.4c-1.8,0-3.3,0.8-4.5,2.3s-1.9,3.8-1.9,7v15.6h-7.3v-31h7.3v4.9h0.1c0.7-1.7,1.7-3,3-4 C201.2,26.6,202.8,26.1,204.7,26.1z M207.9,42.6c0-5.1,1.5-9.2,4.3-12.2c2.9-3,6.9-4.5,12-4.5c4.8,0,8.6,1.4,11.3,4.3 s4.1,6.8,4.1,11.7c0,5-1.5,9-4.3,12c-2.9,3-6.8,4.5-11.8,4.5c-4.8,0-8.6-1.4-11.4-4.2C209.3,51.3,207.9,47.4,207.9,42.6z M215.5,42.3c0,3.2,0.7,5.7,2.2,7.4s3.6,2.6,6.3,2.6c2.6,0,4.7-0.8,6.1-2.6c1.4-1.7,2.1-4.2,2.1-7.6c0-3.3-0.7-5.8-2.1-7.6 c-1.4-1.7-3.5-2.6-6-2.6c-2.7,0-4.7,0.9-6.2,2.7C216.2,36.5,215.5,39,215.5,42.3z M250.5,34.8c0,1,0.3,1.9,1,2.5 c0.7,0.6,2.1,1.3,4.4,2.2c2.9,1.2,5,2.5,6.1,3.9c1.2,1.5,1.8,3.2,1.8,5.3c0,2.9-1.1,5.2-3.4,7c-2.2,1.8-5.3,2.6-9.1,2.6 c-1.3,0-2.7-0.2-4.3-0.5c-1.6-0.3-2.9-0.7-4-1.2v-7.2c1.3,0.9,2.8,1.7,4.3,2.2c1.5,0.5,2.9,0.8,4.2,0.8c1.6,0,2.9-0.2,3.6-0.7 c0.8-0.5,1.2-1.2,1.2-2.3c0-1-0.4-1.8-1.2-2.6c-0.8-0.7-2.4-1.5-4.6-2.4c-2.7-1.1-4.6-2.4-5.7-3.8s-1.7-3.2-1.7-5.4 c0-2.8,1.1-5.1,3.3-6.9c2.2-1.8,5.1-2.7,8.6-2.7c1.1,0,2.3,0.1,3.6,0.4s2.5,0.6,3.4,0.9V34c-1-0.6-2.1-1.2-3.4-1.7 c-1.3-0.5-2.6-0.7-3.8-0.7c-1.4,0-2.5,0.3-3.2,0.8C250.9,33.1,250.5,33.8,250.5,34.8z M266.9,42.6c0-5.1,1.5-9.2,4.3-12.2 c2.9-3,6.9-4.5,12-4.5c4.8,0,8.6,1.4,11.3,4.3s4.1,6.8,4.1,11.7c0,5-1.5,9-4.3,12c-2.9,3-6.8,4.5-11.8,4.5c-4.8,0-8.6-1.4-11.4-4.2 C268.4,51.3,266.9,47.4,266.9,42.6z M274.5,42.3c0,3.2,0.7,5.7,2.2,7.4s3.6,2.6,6.3,2.6c2.6,0,4.7-0.8,6.1-2.6 c1.4-1.7,2.1-4.2,2.1-7.6c0-3.3-0.7-5.8-2.1-7.6c-1.4-1.7-3.5-2.6-6-2.6c-2.7,0-4.7,0.9-6.2,2.7C275.3,36.5,274.5,39,274.5,42.3z M322.9,32.6h-10.9v25h-7.4v-25h-5.2v-6h5.2v-4.3c0-3.2,1.1-5.9,3.2-8s4.8-3.1,8.1-3.1c0.9,0,1.7,0.1,2.4,0.1s1.3,0.2,1.8,0.4v6.3 c-0.2-0.1-0.7-0.3-1.3-0.5c-0.6-0.2-1.3-0.3-2.1-0.3c-1.5,0-2.7,0.5-3.5,1.4c-0.8,0.9-1.2,2.4-1.2,4.2v3.7h10.9v-7l7.3-2.2v9.2h7.4 v6h-7.4v14.5c0,1.9,0.4,3.2,1,4c0.7,0.8,1.8,1.2,3.3,1.2c0.4,0,0.9-0.1,1.5-0.3c0.6-0.2,1.1-0.4,1.5-0.7v6c-0.5,0.3-1.2,0.5-2.3,0.7 c-1.1,0.2-2.1,0.3-3.2,0.3c-3.1,0-5.4-0.8-6.9-2.4c-1.5-1.6-2.3-4.1-2.3-7.4L322.9,32.6L322.9,32.6z" />
+                                                    <rect fill="#F25022" width="34.2" height="34.2" />
+                                                    <rect x="37.8" fill="#7FBA00" width="34.2" height="34.2" />
+                                                    <rect y="37.8" fill="#00A4EF" width="34.2" height="34.2" />
+                                                    <rect x="37.8" y="37.8" fill="#FFB900" width="34.2" height="34.2" />
+                                                </svg>
+                                            </button>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
-                                            <button pButton label="Github" class="submit-button" [loading]="isLoading" (onClick)="onLogin(loginForm)"></button>
+                                            <button pButton class="submit-button p-button-raised google"
+                                                 [loading]="isLoading" (onClick)="onLogin(loginForm)">
+                                                 <svg width="1024px" height="1024px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
+                                                    <circle cx="512" cy="512" r="512" style="fill:#008aaa"/>
+                                                    <path d="M786.2 395.5h-80.6c-1.5 0-3-.8-3.7-2.1l-64.7-112.2c-.8-1.3-2.2-2.1-3.8-2.1h-264c-1.5 0-3 .8-3.7 2.1l-67.3 116.4-64.8 112.2c-.7 1.3-.7 2.9 0 4.3l64.8 112.2 67.2 116.5c.7 1.3 2.2 2.2 3.7 2.1h264.1c1.5 0 3-.8 3.8-2.1L702 630.6c.7-1.3 2.2-2.2 3.7-2.1h80.6c2.7 0 4.8-2.2 4.8-4.8V400.4c-.1-2.7-2.3-4.9-4.9-4.9zM477.5 630.6l-20.3 35c-.3.5-.8 1-1.3 1.3-.6.3-1.2.5-1.9.5h-40.3c-1.4 0-2.7-.7-3.3-2l-60.1-104.3-5.9-10.3-21.6-36.9c-.3-.5-.5-1.1-.4-1.8 0-.6.2-1.3.5-1.8l21.7-37.6 65.9-114c.7-1.2 2-2 3.3-2H454c.7 0 1.4.2 2.1.5.5.3 1 .7 1.3 1.3l20.3 35.2c.6 1.2.5 2.7-.2 3.8l-65.1 112.8c-.3.5-.4 1.1-.4 1.6 0 .6.2 1.1.4 1.6l65.1 112.7c.9 1.5.8 3.1 0 4.4zm202.1-116.7L658 550.8l-5.9 10.3L592 665.4c-.7 1.2-1.9 2-3.3 2h-40.3c-.7 0-1.3-.2-1.9-.5-.5-.3-1-.7-1.3-1.3l-20.3-35c-.9-1.3-.9-2.9-.1-4.2l65.1-112.7c.3-.5.4-1.1.4-1.6 0-.6-.2-1.1-.4-1.6l-65.1-112.8c-.7-1.2-.8-2.6-.2-3.8l20.3-35.2c.3-.5.8-1 1.3-1.3.6-.4 1.3-.5 2.1-.5h40.4c1.4 0 2.7.7 3.3 2l65.9 114 21.7 37.6c.3.6.5 1.2.5 1.8 0 .4-.2 1-.5 1.6z" style="fill:#fff"/>
+                                                 </svg>                                                 
+                                                <p class="social-media-name">Keycloak</p>
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
