--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
@@ -53,3 +53,13 @@
   color: white;
   border-color: grey;
 }
+.login-form-card {
+  border: 0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.social-media-name{
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  margin-left: 0.5rem;
+  font-weight: bold;
+}
