Added register option

--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.html
@@ -64,7 +64,7 @@
                             </form>
                             <hr>
                             <div class="social-login">
-                                <p class="text-center">Or Sign in with</p>
+                                <p class="text-center m-2">Or Sign in with</p>
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
@@ -119,6 +119,11 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <hr>
+                            <div class="register">
+                                <span>Don't have an account? </span> <button pButton type="button" label="Register"
+                                            class="p-button-link register-button" (onClick)="forgotPassword()"></button>
                             </div>
                         </div>
                     </div>
