--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
@@ -74,3 +74,9 @@
   margin-left: 0.5rem;
   font-weight: bold;
 }
+.register-button{
+  padding: 0 !important;
+}
+hr{
+  margin: 0.4rem 0 0.4rem 0!important;
+}
