--- a/DotnetAngularBoilerplate.WebClient/src/app/app.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar *ngIf="isNavbarActive"></app-navbar>
-<app-header *ngIf="isNavbarActive"></app-header>
+<app-navbar *ngIf="sharedService.isNavbarActive"></app-navbar>
+<app-header *ngIf="sharedService.isNavbarActive"></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
