--- a/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <header class="header" id="header">
     <div [attr.aria-hidden]="true" class="header_toggle" (keyup)="showNavbar('header-toggle', 'nav-bar', 'body-pd', 'header')" (click)="showNavbar('header-toggle', 'nav-bar', 'body-pd', 'header')"><i class="bx bx-menu" id="header-toggle"></i></div>
     <div class="header_img">
-      <img src="https://i.imgur.com/hczKIze.jpg" alt="" />
+      <span>{{sharedService.headerUserName}}</span>
     </div>
   </header>
   <div class="l-navbar" id="nav-bar">
@@ -10,7 +10,7 @@
       <div>
         <a href="#" class="nav_logo">
           <i class="bx bx-layer nav_logo-icon"></i>
-          <span class="nav_logo-name">BBBootstrap</span>
+          <span class="nav_logo-name">Developer</span>
         </a>
         <div class="nav_list">
           <a href="#" class="nav_link active">
