Moved code and setup routing

--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/dashboard/dashboard.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,1 @@
-<app-navbar *ngIf="sharedService.isNavbarActive"></app-navbar>
-<app-header *ngIf="sharedService.isNavbarActive"></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<p>dashboard works!</p>
