--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.scss
@@ -4,12 +4,12 @@
   margin: 0 auto;
   width: 100%;
 }
-.login-section {
-  margin-top: calc(0rem - var(--header-height) - 1rem);
-  margin-left: calc(0rem - var(--nav-width) - 2rem);
-  height: 100vh;
-  width: 100vw;
-}
+// .login-section {
+//   margin-top: calc(0rem - var(--header-height) - 1rem);
+//   margin-left: calc(0rem - var(--nav-width) - 2rem);
+//   height: 100vh;
+//   width: 100vw;
+// }
 .login-header {
   height: 5vh;
 }
