--- a/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.html
@@ -8,16 +8,16 @@
   <div class="l-navbar" id="nav-bar">
     <nav class="nav">
       <div>
-        <a href="#" class="nav_logo">
+        <a [attr.aria-hidden]="true" (keyup)="navigateTo('dashboard')" (click)="navigateTo('dashboard')" class="nav_logo">
           <i class="bx bx-layer nav_logo-icon"></i>
           <span class="nav_logo-name">Developer</span>
         </a>
         <div class="nav_list">
-          <a href="#" class="nav_link active">
+          <a [attr.aria-hidden]="true" (keyup)="navigateTo('dashboard')" (click)="navigateTo('dashboard')" class="nav_link active">
             <i class="bx bx-grid-alt nav_icon"></i>
             <span class="nav_name">Dashboard</span>
           </a>
-          <a href="#" class="nav_link">
+          <a [attr.aria-hidden]="true" (keyup)="navigateTo('user-management')" (click)="navigateTo('user-management')" class="nav_link">
             <i class="bx bx-user nav_icon"></i>
             <span class="nav_name">Users</span>
           </a>
