--- a/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.scss
+++ b/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.scss
@@ -97,7 +97,8 @@ a {
   grid-template-columns: max-content max-content;
   align-items: center;
   column-gap: 1rem;
-  padding: .5rem 0 .5rem 1.5rem
+  padding: .5rem 0 .5rem 1.5rem;
+  cursor: pointer;
 }
 
 .nav_logo {
@@ -180,7 +181,7 @@ a {
     color: #F7F6FB;
     font-size: 1.3rem;
   }
-  
+
   .l-navbar {
     left: 0;
     padding: 1rem 1rem 0 0
