--- a/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.html
@@ -8,38 +8,20 @@
   <div class="l-navbar" id="nav-bar">
     <nav class="nav">
       <div>
-        <a [attr.aria-hidden]="true" (keyup)="navigateTo('dashboard')" (click)="navigateTo('dashboard')" class="nav_logo">
+        <a [attr.aria-hidden]="true" (keyup)="navigateTo('dashboard', 0)" (click)="navigateTo('dashboard', 0)" class="nav_logo">
           <i class="bx bx-layer nav_logo-icon"></i>
           <span class="nav_logo-name">Developer</span>
         </a>
         <div class="nav_list">
-          <a [attr.aria-hidden]="true" (keyup)="navigateTo('dashboard')" (click)="navigateTo('dashboard')" class="nav_link active">
-            <i class="bx bx-grid-alt nav_icon"></i>
-            <span class="nav_name">Dashboard</span>
-          </a>
-          <a [attr.aria-hidden]="true" (keyup)="navigateTo('user-management')" (click)="navigateTo('user-management')" class="nav_link">
-            <i class="bx bx-user nav_icon"></i>
-            <span class="nav_name">Users</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class="bx bx-message-square-detail nav_icon"></i>
-            <span class="nav_name">Messages</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class="bx bx-bookmark nav_icon"></i>
-            <span class="nav_name">Bookmark</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class="bx bx-folder nav_icon"></i>
-            <span class="nav_name">Files</span>
-          </a>
-          <a href="#" class="nav_link">
-            <i class="bx bx-bar-chart-alt-2 nav_icon"></i>
-            <span class="nav_name">Stats</span>
-          </a>
+          <ng-template ngFor let-menu [ngForOf]="menuList" let-i="index">
+            <a [attr.aria-hidden]="true" (click)="navigateTo(menu.route, i)" [ngClass]="activatedRoute === i ? 'nav_link active': 'nav_link'">
+              <i [ngClass]="menu.icon"></i>
+              <span class="nav_name">{{menu.displayName}}</span>
+            </a>
+          </ng-template>
         </div>
       </div>
-      <a href="#" class="nav_link">
+      <a [attr.aria-hidden]="true" (keyup)="onLogout()" (click)="onLogout()" class="nav_link">
         <i class="bx bx-log-out nav_icon"></i>
         <span class="nav_name">SignOut</span>
       </a>
