--- a/DotnetAngularBoilerplate.WebClient/src/app/@core/components/static/static.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/@core/components/static/static.component.html
@@ -1,6 +1,6 @@
 <app-navbar *ngIf="sharedService.isNavbarActive"></app-navbar>
 <app-header *ngIf="sharedService.isNavbarActive"></app-header>
 <div class="static-layout">
-  <router-outlet outlet="pages"></router-outlet>
+  <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
