--- a/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/@core/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <body id="body-pd">
   <header class="header" id="header">
-    <div [attr.aria-hidden]="true" class="header_toggle" (keyup)="showNavbar('header-toggle', 'nav-bar', 'body-pd', 'header')" (click)="showNavbar('header-toggle', 'nav-bar', 'body-pd', 'header')"><i class="bx bx-menu" id="header-toggle"></i></div>
+    <div aria-hidden="true" class="header_toggle" (click)="showNavbar('header-toggle', 'nav-bar', 'body-pd', 'header')"><i class="bx bx-menu" id="header-toggle"></i></div>
     <div class="header_img">
       <span>{{sharedService.headerUserName}}</span>
     </div>
@@ -8,20 +8,20 @@
   <div class="l-navbar" id="nav-bar">
     <nav class="nav">
       <div>
-        <a [attr.aria-hidden]="true" (keyup)="navigateTo('dashboard', 0)" (click)="navigateTo('dashboard', 0)" class="nav_logo">
+        <a aria-hidden="true" (click)="navigateTo('dashboard', 0)" class="nav_logo">
           <i class="bx bx-layer nav_logo-icon"></i>
           <span class="nav_logo-name">Developer</span>
         </a>
         <div class="nav_list">
           <ng-template ngFor let-menu [ngForOf]="menuList" let-i="index">
-            <a [attr.aria-hidden]="true" (click)="navigateTo(menu.route, i)" [ngClass]="activatedRoute === i ? 'nav_link active': 'nav_link'">
+            <a aria-hidden="true" (click)="navigateTo(menu.route, i)" [ngClass]="activatedRoute === i ? 'nav_link active': 'nav_link'" title="{{menu.displayName}}" >
               <i [ngClass]="menu.icon"></i>
               <span class="nav_name">{{menu.displayName}}</span>
             </a>
           </ng-template>
         </div>
       </div>
-      <a [attr.aria-hidden]="true" (keyup)="onLogout()" (click)="onLogout()" class="nav_link">
+      <a aria-hidden="true" (click)="onLogout()" class="nav_link">
         <i class="bx bx-log-out nav_icon"></i>
         <span class="nav_name">SignOut</span>
       </a>
