OIDC login flow

--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/auth/login/login.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/auth/login/login.component.html
@@ -74,7 +74,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
                                             <button pButton class="submit-button p-button-raised google"
-                                                [disabled]="isLoading" (onClick)="onSocialLogin('Goggle')"><svg
+                                                [disabled]="isLoading" (click)="onSocialLogin('Goggle')"><svg
                                                     xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 0 24 24"
                                                     width="35">
                                                     <path
@@ -98,7 +98,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
                                             <button pButton class="submit-button p-button-raised google"
-                                                [disabled]="isLoading" (onClick)="onSocialLogin('Microsoft')"><svg
+                                                [disabled]="isLoading" (click)="onSocialLogin('Microsoft')"><svg
                                                     xmlns="http://www.w3.org/2000/svg" version="1.1"
                                                     viewBox="0 0 337.6 72">
                                                     <path fill="#737373"
@@ -114,7 +114,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
                                             <button pButton class="submit-button p-button-raised google"
-                                                [disabled]="isLoading" (onClick)="onSocialLogin('Keycloak')">
+                                                [disabled]="isLoading" (click)="onSocialLogin('Keycloak')">
                                                 <svg width="1024px" height="1024px" viewBox="0 0 1024 1024"
                                                         xmlns="http://www.w3.org/2000/svg">
                                                         <circle cx="512" cy="512" r="512" style="fill:#008aaa" />
